--- a/src/components/Address/Address.css
+++ b/src/components/Address/Address.css
@@ -1,12 +1,12 @@
 .check__inner-form-box {
-  max-width: 700px;
+  max-width: 650px;
   width: 100%;
   display: flex;
   flex-direction: column;
 }
 .check__inner-form-boxx {
   display: flex;
-  justify-content: space-between;
+  gap: 20px;
 }
 .check__inner-form-box-title {
   margin-bottom: 21px;
@@ -17,6 +17,9 @@
 }
 .flexx {
   display: flex;
+  flex-direction: row;
+  gap: 100px;
+  justify-content: space-between;
 }
 .check__inner-form {
   display: flex;
@@ -59,7 +62,6 @@
 @media only screen and (max-width: 1100px) {
   .flexx {
     align-items: center;
-    gap: 30px;
     flex-direction: column;
   }
 }
